add update profile form

--- a/awwards/templates/profile/update_profile.html
+++ b/awwards/templates/profile/update_profile.html
@@ -1,1 +1,19 @@
-{% extends 'base.html' %}
+{% extends 'base.html' %}{% load bootstrap4 %}
+
+{% block content %}
+<div class="container-fluid">
+    <br>
+    <form method="POST" enctype="multipart/form-data">
+        {% csrf_token %}
+        <div class="row">
+            <div class="col-md-2"></div>
+            <div class="col-md-6">
+                {% bootstrap_form u_form %}
+                {% bootstrap_form p_form %}
+                <button class="btn blue-gradient btn-sm">Update Profile</button>
+            </div>
+            <div class="col-md-4"></div>
+        </div>
+    </form>
+</div>
+{% endblock %}
