--- a/awwards/templates/index.html
+++ b/awwards/templates/index.html
@@ -1,1 +1,24 @@
 {% extends 'base.html' %}
+{% load bootstrap4 %}
+
+{% block content %}
+<div class="container-fluid">
+    <hr>
+    <div class="jumbotron card card-image" style="background-image: url(https://images.pexels.com/photos/2098604/pexels-photo-2098604.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500);background-repeat: none;">
+        <div class="text-white text-center py-5 px-4">
+            <div>
+                <h2 class="card-title h1-responsive pt-3 mb-5 font-bold"><strong><i class="fas fa-award"></i>   WELCOME TO AWWARDS</strong></h2>
+                <p class="mx-5 mb-5">Post a project to be reviewed by other users<br>
+                Feel free to review other users' projects</p>
+            </div>
+        </div>
+    </div>
+    <hr>
+    <div class="row">
+        <div class="col-md-2"></div>
+        <div class="col-md-6">
+            
+        </div>
+    </div>
+</div>
+{% endblock %}
