--- a/awwards/templates/index.html
+++ b/awwards/templates/index.html
@@ -9,15 +9,25 @@
             <div>
                 <h2 class="card-title h1-responsive pt-3 mb-5 font-bold"><strong><i class="fas fa-award"></i>   WELCOME TO AWWARDS</strong></h2>
                 <p class="mx-5 mb-5">Post a project to be reviewed by other users<br>
-                Feel free to review other users' projects</p>
+                Feel free to review and rate other users' projects</p>
             </div>
         </div>
     </div>
     <hr>
     <div class="row">
-        <div class="col-md-2"></div>
+        <div class="col-md-1"></div>
         <div class="col-md-6">
-            
+            {% for project in projects %}
+            <div class="card">
+                <div class="card-header">Project owner: {{project.user.username}}</div>
+                <div class="card-body">
+                    <h4 class="card-title">{{project.project_title}}</h3>
+                    <p class="card-text">{{project.project_description}}</p>
+                    <a href="{{project.project_link}}"><p class="card-text">View live site  <i class="fas fa-angle-double-right"></i></p></a>
+                </div>
+            </div>
+            <br>
+            {% endfor %}
         </div>
     </div>
 </div>
