--- a/awwards/templates/navbar.html
+++ b/awwards/templates/navbar.html
@@ -20,7 +20,7 @@
       </ul>
       <ul class="navbar-nav ml-auto nav-flex-icons">
         <li class="nav-item">
-            <a class="nav-link" href="{% url 'profile' id=current_user.id %}"><img src="{{current_user.profile.profile_pic.url}}" class="rounded-circle z-depth-0" alt="avatar image" height="35" width="35"></a>
+            <a class="nav-link" href="{% url 'userProfile' id=current_user.id %}"><img src="{{current_user.profile.profile_pic.url}}" class="rounded-circle z-depth-0" alt="avatar image" height="35" width="35"></a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="/logout" data-toggle="popover-hover" data-content="Logout">LOG OUT   <i class="fas fa-sign-out-alt"></i></a>
