--- a/awwards/templates/index.html
+++ b/awwards/templates/index.html
@@ -1,10 +1,11 @@
 {% extends 'base.html' %}
 {% load bootstrap4 %}
+{% load mathfilters %}
 
 {% block content %}
 <div class="container-fluid">
     <hr>
-    <div class="jumbotron card card-image" style="background-image: url(https://images.pexels.com/photos/2098604/pexels-photo-2098604.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500);background-repeat: none;">
+    <div class="jumbotron card card-image" style="background-image: url(https://images.pexels.com/photos/2098578/pexels-photo-2098578.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);background-size: cover;">
         <div class="text-white text-center py-5 px-4">
             <div>
                 <h2 class="card-title h1-responsive pt-3 mb-5 font-bold"><strong><i class="fas fa-award"></i>   WELCOME TO AWWARDS</strong></h2>
@@ -15,20 +16,28 @@
     </div>
     <hr>
     <div class="row">
-        <div class="col-md-1"></div>
-        <div class="col-md-6">
-            {% for project in projects %}
-            <div class="card">
-                <div class="card-header">Project owner: {{project.user.username}}</div>
+        {% for project in projects %}
+        <div class="col-md-4">
+            <div class="card mb-3">
+                <div class="view overlay">
+                    <img class="card-img-top" src="{{project.landing_page.url}}">
+                    <a>
+                        <div class="mask rgba-white-slight"></div>
+                    </a>
+                </div>
                 <div class="card-body">
-                    <h4 class="card-title"><a href="{% url 'project' project_id=project.id %}">{{project.project_title}}</a></h3>
-                    <p class="card-text">{{project.project_description}}</p>
-                    <a href="{{project.project_link}}"><p class="card-text">View live site  <i class="fas fa-angle-double-right"></i></p></a>
+                    <h4 class="card-title"><a style="color: inherit; text-decoration: none;" href="{% url 'project' project_id=project.id %}">{{project.project_title}}</a></h3>
+                    <p class="card-text">{{project.project_description|truncatechars:80}}</p>
+                    <a style="color: inherit; text-decoration: none;" href="{{project.project_link}}"><p class="card-text">View live site  <i class="fas fa-angle-double-right"></i></p></a>
+                    <p class="card-text" style="text-align: right;">{{project.posted_on|timesince}}  ago</p>
+                </div>
+                <div class="card-footer">
+                    <p> BY <a href="{% url 'userProfile' id=project.user.id %}" style="text-decoration: none;color: inherit;">{{project.user.username}}   <img  src="{{project.user.profile.profile_pic.url}}" width="20" height="20" class="rounded-circle border userimage"></a></p>
                 </div>
             </div>
             <br>
-            {% endfor %}
         </div>
+        {% endfor %}
     </div>
 </div>
 {% endblock %}
