--- a/awwards/templates/profile/profile.html
+++ b/awwards/templates/profile/profile.html
@@ -1,1 +1,61 @@
 {% extends 'base.html' %}
+
+{% block content %}
+<div class="container-fluid">
+<div class="jumbotron text-center blue-grey lighten-5">
+    <h2 class="card-title h2">{{profile.user.username}}'s profile</h2>
+    {% if profile.user.first_name and profile.user.last_name %}
+    <p class="indigo-text my-4 font-weight-bold">{{profile.user.first_name}}  {{profile.user.last_name}}</p>
+    {% endif %}
+    <div class="row d-flex justify-content-center">
+      <div class="col-xl-7 pb-2">
+        {% if profile.bio %}
+        <p class="card-text">{{profile.bio}}</p>
+        {% endif %}
+        <h6 class="card-title">Contact Information</h6>
+        {% if profile.phone_number %}
+        <p class="card-text">Phone Number: {{profile.phone_number}}</p>
+        {% endif %}
+        <p class="card-text">Email: {{profile.user.email}}</p>
+      </div>  
+    </div>
+    <hr class="my-4 pb-2">
+    <img src="{{current_user.profile.profile_pic.url}}" class="rounded-circle z-depth-0" alt="avatar image" height="150" width="150"><br><br>
+    {% if profile.user == request.user and request.user.is_authenticated %}
+    <a role="button" href="{% url 'updateProfile' %}" class="btn blue-gradient">EDIT PROFILE</a>
+    {% else %}
+    <div></div>
+    {% endif %}
+  </div>
+  <hr>
+  <div class="row">
+      <div class="col-md-12">
+          <h4 class="text-center">{{profile.user.username}}'s posts</h4>
+      </div>
+  </div>
+  <div class="row">
+    {% for project in projects %}
+    <div class="col-md-4">
+        <div class="card mb-3">
+            <div class="view overlay">
+                <img class="card-img-top" src="{{project.landing_page.url}}">
+                <a>
+                    <div class="mask rgba-white-slight"></div>
+                </a>
+            </div>
+            <div class="card-body">
+                <h4 class="card-title"><a style="color: inherit; text-decoration: none;" href="{% url 'project' project_id=project.id %}">{{project.project_title}}</a></h3>
+                <p class="card-text">{{project.project_description|truncatechars:80}}</p>
+                <a style="color: inherit; text-decoration: none;" href="{{project.project_link}}"><p class="card-text">View live site  <i class="fas fa-angle-double-right"></i></p></a>
+                <p class="card-text" style="text-align: right;">{{project.posted_on|timesince}}  ago</p>
+            </div>
+            <div class="card-footer">
+                <p> BY <a href="{% url 'userProfile' id=project.user.id %}" style="text-decoration: none;color: inherit;">{{project.user.username}}   <img  src="{{project.user.profile.profile_pic.url}}" width="20" height="20" class="rounded-circle border userimage"></a></p>
+            </div>
+        </div>
+        <br>
+    </div>
+    {% endfor %}
+</div>
+</div>
+{% endblock %}
