allow a user to change their password

--- a/awwards/templates/registration/login.html
+++ b/awwards/templates/registration/login.html
@@ -12,6 +12,7 @@
                 {% bootstrap_form form %}
                 <button type="submit" class="btn blue-gradient btn-sm">SIGN UP</button>
             </form>
+            <p><a href="/accounts/password/change">Forgot your Password ?</a></p>
         </div>
     </div>
 </div>
