--- a/awwards/templates/profile/profile.html
+++ b/awwards/templates/profile/profile.html
@@ -30,7 +30,11 @@
     <hr>
     <div class="row">
         <div class="col-md-12">
+            {% if projects %}
             <h4 class="text-center">{{profile.user.username}}'s posts</h4>
+            {% else %}
+            <h4 class="text-center">{{profile.user.username}} has not posted any projects</h4>
+            {% endif %}
         </div>
     </div>
     <div class="row">
