--- a/awwards/templates/registration/login.html
+++ b/awwards/templates/registration/login.html
@@ -12,7 +12,7 @@
                 {% bootstrap_form form %}
                 <button type="submit" class="btn blue-gradient btn-sm">LOG IN</button>
             </form>
-            <a href="/accounts/register">Don't have an account? Sign up here</a>
+            <p>Don't have an account?<a href="/accounts/register">Sign up here</a></p>
             <p><a href="/accounts/password/change">Forgot your Password ?</a></p>
         </div>
     </div>
