--- a/awwards/templates/navbar.html
+++ b/awwards/templates/navbar.html
@@ -18,6 +18,12 @@
         </li>
         
       </ul>
+      <form class="form-inline" role="search" action="{% url 'search' %}">
+        <div class="md-form my-0">
+          <input class="form-control mr-sm-2" type="text" placeholder="Search project" aria-label="Search" name="project">
+          <button class="btn peach-gradient btn-sm" type="submit"><i class="fas fa-search"></i></button>
+        </div>
+      </form>
       <ul class="navbar-nav ml-auto nav-flex-icons">
         <li class="nav-item">
           <a class="nav-link" href="{% url 'userProfile' id=current_user.id %}"><img src="{{current_user.profile.profile_pic.url}}" class="rounded-circle z-depth-0" alt="avatar image" height="25" width="25"></a>
