--- a/awwards/templates/base.html
+++ b/awwards/templates/base.html
@@ -9,7 +9,7 @@
         {% if title %}
         <title>{{title}}</title>
         {% else %}
-        <title>Instagram</title>
+        <title>AWWARDS</title>
         {% endif %}
 
         {% block styles %}
