--- a/awwards/templates/profile/profile.html
+++ b/awwards/templates/profile/profile.html
@@ -20,7 +20,7 @@
         </div>  
     </div>
     <hr class="my-4 pb-2">
-    <img src="{{current_user.profile.profile_pic.url}}" class="rounded-circle z-depth-0" alt="avatar image" height="150" width="150"><br><br>
+    <img src="{{user.profile.profile_pic.url}}" class="rounded-circle z-depth-0" alt="avatar image" height="150" width="150"><br><br>
     {% if profile.user == request.user and request.user.is_authenticated %}
     <a role="button" href="{% url 'updateProfile' %}" class="btn blue-gradient">EDIT PROFILE</a>
     {% else %}
